name:                gloss-asteroids
version:             0.1.0.0
author:              Sanaz & Justin
maintainer:          -
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-asteroids
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random
  other-modules:
    Controller
    Model
    View
  hs-source-dirs:      src
  default-language:    Haskell2010